fix an issue that could sometimes cut off the ends of the buttons on the homepage

--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -264,3 +264,9 @@ a~a>.frontscreenshot {
 		display: none;
 	}
 }
+
+@meda ( min-width: 480px) {
+	.bigbar {
+		min-width:486px;
+	}
+}
